inserito header e reset rules

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toboolist</title>
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
+    <header class="main-header">
+        <div class="conteiner">
+            <img class="logo" src="./img/Logo.png" alt="logo boolean">
+            <strong class="webapp-name">Toboolist</strong>
+
+        </div>
+
+    </header>
+    
     
 </body>
 </html>
