impostata lista e correzione bg

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
 
     </header>
     <main>
-        <div class="conteiner" class="bg-gray">
-            <div class="card" class="bg-white">
+        <div class="conteiner" style="background-color: gray;">
+            <div class="card" style="background-color: white;">
+                <!-- inserimento menu -->
                 <nav class="menu">
                     <span class="button">Add Task</span>
                     <span class="button">Add Section</span>
                 </nav>
+                <!-- inserimento todolist -->
                 <div>
                     <ul>
                         <li>
@@ -36,19 +38,19 @@
                         <li>
                             <strong>Today</strong>
                             <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Recrulting blog post</li>
+                                <li>Mobile app launch</li>
+                                <li>Interview John H.</li>
+                                <li>Summit update to mobile storefronts</li>
                             </ul>
                         </li>
                         <li>
                             <strong>Upcoming</strong>
                             <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Schedule meeting with Alex</li>
+                                <li>Homepage refresh</li>
+                                <li>Onboard new sales team members</li>
+                                <li>Review editorial calendar</li>
                             </ul>
                         </li>
                     </ul>
