correzione struttura togliendo alcuni div e ul

--- a/index.html
+++ b/index.html
@@ -19,44 +19,39 @@
 
     </header>
     <main>
-        <div class="conteiner" style="background-color: gray;">
-            <div class="card" style="background-color: white;">
+        <div class="conteiner bg-gray">
+            <div class="card bg-white">
+
                 <!-- inserimento menu -->
                 <nav class="menu">
                     <span class="button">Add Task</span>
                     <span class="button">Add Section</span>
                 </nav>
                 <!-- inserimento todolist -->
-                <div>
+                 <section class="todolist">
+                    <h2>New Task</h2>
                     <ul>
-                        <li>
-                            <Strong>New task</Strong>
-                            <ul>
-                                <li>Quarterly Newsletter</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Today</strong>
-                            <ul>
-                                <li>Recrulting blog post</li>
-                                <li>Mobile app launch</li>
-                                <li>Interview John H.</li>
-                                <li>Summit update to mobile storefronts</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Upcoming</strong>
-                            <ul>
-                                <li>Schedule meeting with Alex</li>
-                                <li>Homepage refresh</li>
-                                <li>Onboard new sales team members</li>
-                                <li>Review editorial calendar</li>
-                            </ul>
-                        </li>
+                        <li>Quarterly Newsletter <span class="label">Editorial</span></li>
                     </ul>
-                </div>
+                    <h2>Today</h2>
+                    <ul>
+                        <li>Recruiting blog post <span class="label">Editorial</span></li>
+                        <li>Mobile app launch <span class="label">Editorial</span></li>
+                        <li>interview John H. <span class="label">Editorial</span></li>
+                        <li>Summit update to mobile storefronts <span class="label">Editorial</span></li>
+                    </ul>
+                    <h2>Upcooming</h2>
+                    <ul>
+                        <li>Schedule meeting with Alex</li>
+                        <li>Homepage refresh <span class="label">Editorial</span></li>
+                        <li>Oboard new sales team members <span class="label">Editorial</span></li>
+                        <li>review editorial calendar <span class="label">Editorial</span></li>
+                    </ul>
+                </section>
 
+            
             </div>
+                    
 
         </div>
 
