inserimento etichette alle liste

--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
                  <section class="todolist">
                     <h2>New Task</h2>
                     <ul>
-                        <li>Quarterly Newsletter <span class="label">Editorial</span></li>
+                        <li>Quarterly Newsletter <span class="label editorial">Editorial</span></li>
                     </ul>
                     <h2>Today</h2>
                     <ul>
-                        <li>Recruiting blog post <span class="label">Editorial</span></li>
-                        <li>Mobile app launch <span class="label">Editorial</span></li>
-                        <li>interview John H. <span class="label">Editorial</span></li>
-                        <li>Summit update to mobile storefronts <span class="label">Editorial</span></li>
+                        <li>Recruiting blog post <span class="label editorial">Editorial</span></li>
+                        <li>Mobile app launch <span class="label goals">Q1 Goals</span></li>
+                        <li>interview John H. <span class="label recruiting">Recruiting</span></li>
+                        <li>Summit update to mobile storefronts <span class="label mobile">Mobile</span></li>
                     </ul>
                     <h2>Upcooming</h2>
                     <ul>
                         <li>Schedule meeting with Alex</li>
-                        <li>Homepage refresh <span class="label">Editorial</span></li>
-                        <li>Oboard new sales team members <span class="label">Editorial</span></li>
-                        <li>review editorial calendar <span class="label">Editorial</span></li>
+                        <li>Homepage refresh <span class="label website">Website</span></li>
+                        <li>Oboard new sales team members <span class="label sales">Sales</span></li>
+                        <li>Review editorial calendar <span class="label editorial">Editorial</span></li>
                     </ul>
                 </section>
 
